2004-08-22  Rich Kilmer <rich@infoether.com>
        * lib/rubygems/install.rb: fixed stub generation...i added the version 
          stuff that only app stubs should have...sorry!

2004-08-17  Gavin Sinclair  <gsinclair@soyabean.com.au>

	* lib/rubygems/gem_commands.rb: --rdoc is default on 'update' command,
	  consistent with 'install'.  'default_str' methods changed to reflect
	  --rdoc being default now.

2004-08-21  Chad Fowler  <chad@chadfowler.com>
	* lib/rubygems/gem_commands.rb: Proper checking for gems in local 
	directory on local install.  rescue Gem::LoadError to avoid ugly
	backtrace.
	* lib/rubygems/installer.rb: created Gem::LoadError to hold extra
	metadata.  Setting up for proper dependency installation on local
	installs.
	
2004-08-20  Chad Fowler  <chad@chadfowler.com>
	
	* lib/rubygems/specification.rb: Fixed small bug in the previous spec
	change commit.

	* lib/rubygems/cache.rb: Prevent catastrophic failure if a gemspec is 
	corrupted.

	* lib/rubygems/installer.rb: Fixed (in not a great way) a bug that would
	cause a zero-length spec file to be written to the gem specifications
	directory.

2004-08-19  Chad Fowler  <chad@chadfowler.com>

	* lib/rubygems/specification.rb: #files auto-includes any #extensions,
	#extra_rdoc_files, #test_files, etc. that weren't explicitly added
	to the file list.

2004-08-18  Chad Fowler  <chad@chadfowler.com>

	* lib/rubygems/specification.rb: One more bug with #test_files.
	Default value of [] wasn't set, resulting in an attempt to call
	#empty? on nil.

	* lib/rubygems/gem_commands.rb: Unit tests appear to be working now.
	Still more testing to do.

	* lib/rubygems/remote_installer.rb, lib/rubygems/installer.rb: Fixed
	minor bugs in default selections for questions asked during 
	installation and uninstallation
 
2004-08-17  Gavin Sinclair  <gsinclair@soyabean.com.au>

	* lib/rubygems/specification.rb:
	  - #test_suite_file and #test_files now work on older gems.